--- a/my.html
+++ b/my.html
@@ -6,15 +6,12 @@
     <title></title>
     <script src="js/mui.min.js"></script>
     <link href="css/mui.min.css" rel="stylesheet"/>
-    <link href="css/font-awesome.css" rel="stylesheet"/>
     <script type="text/javascript" charset="utf-8">
-      	mui.init({
-			swipeBack:true //启用右滑关闭功能
-		});
+      	mui.init();
     </script>
 </head>
 <body>
-    <div class="mui-content">
+	<div class="mui-content">
   <span class="mui-icon fa fa-spin fa-spinner"></span>正在加载...
   </div>
 </body>
