--- a/OrganizationApp/discover.html
+++ b/OrganizationApp/discover.html
@@ -1,21 +1,102 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title></title>
-    <script src="js/mui.min.js"></script>
-    <link href="css/mui.min.css" rel="stylesheet"/>
-    <link href="css/font-awesome.css" rel="stylesheet"/>
-    <script type="text/javascript" charset="utf-8">
-      	mui.init({
-			swipeBack:true //启用右滑关闭功能
-		});
-    </script>
-</head>
-<body>
-    <div class="mui-content">
-  <span class="mui-icon fa fa-spin fa-spinner"></span>正在加载...
-  </div>
-</body>
+
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<title></title>
+		<script src="js/mui.min.js"></script>
+		<link href="css/mui.min.css" rel="stylesheet" />
+		<link href="css/font-awesome.css" rel="stylesheet" />
+		<script type="text/javascript" charset="utf-8">
+			mui.init();
+		</script>
+	</head>
+
+	<body>
+		<div class="mui-content">
+			<ul id="MessageList" class="mui-table-view mui-table-view-chevron">
+				<li id="宝马车主" class="mui-table-view-cell mui-media">
+					<div class="mui-slider-right mui-disabled">
+						<a class="mui-btn mui-btn-red">删除</a>
+					</div>
+					<div class="mui-slider-handle">
+						<img class="mui-media-object mui-pull-left" src="image/60x60.gif" />
+						<div class="mui-media-body">
+							宝马车主
+							<p class="mui-ellipsis">经过朋友介绍车事帮比4S便宜很多而且方便，家旁边就有好几家特约店，车都开了6年多了但开的比较少才45000公里，购买配件很简单选择自助保养都有推荐的，一气呵成在线支付成功，第二天就收到了，应该都是正品吧，大品牌信得过。</p>
+						</div>
+					</div>
+				</li>
+				<li id="奥迪车主" class="mui-table-view-cell mui-media">
+					<div class="mui-slider-right mui-disabled">
+						<a class="mui-btn mui-btn-red">删除</a>
+					</div>
+					<div class="mui-slider-handle">
+						<img class="mui-media-object mui-pull-left" src="image/60x60.gif" />
+						<div class="mui-media-body">
+							奥迪车主
+							<p class="mui-ellipsis">经过朋友介绍车事帮比4S便宜很多而且方便，家旁边就有好几家特约店，车都开了6年多了但开的比较少才45000公里，购买配件很简单选择自助保养都有推荐的，一气呵成在线支付成功，第二天就收到了，应该都是正品吧，大品牌信得过。</p>
+						</div>
+					</div>
+				</li>
+				<li id="雪弗兰车主" class="mui-table-view-cell mui-media">
+					<div class="mui-slider-right mui-disabled">
+						<a class="mui-btn mui-btn-red">删除</a>
+					</div>
+					<div class="mui-slider-handle">
+						<img class="mui-media-object mui-pull-left" src="image/60x60.gif" />
+						<div class="mui-media-body">
+							雪弗兰车主
+							<p class="mui-ellipsis">经过朋友介绍车事帮比4S便宜很多而且方便，家旁边就有好几家特约店，车都开了6年多了但开的比较少才45000公里，购买配件很简单选择自助保养都有推荐的，一气呵成在线支付成功，第二天就收到了，应该都是正品吧，大品牌信得过。</p>
+						</div>
+					</div>
+				</li>
+				<li id="捷豹车主" class="mui-table-view-cell mui-media">
+					<div class="mui-slider-right mui-disabled">
+						<a class="mui-btn mui-btn-red">删除</a>
+					</div>
+					<div class="mui-slider-handle">
+						<img class="mui-media-object mui-pull-left" src="image/60x60.gif" />
+						<div class="mui-media-body">
+							捷豹车主
+							<p class="mui-ellipsis">经过朋友介绍车事帮比4S便宜很多而且方便，家旁边就有好几家特约店，车都开了6年多了但开的比较少才45000公里，购买配件很简单选择自助保养都有推荐的，一气呵成在线支付成功，第二天就收到了，应该都是正品吧，大品牌信得过。</p>
+						</div>
+					</div>
+				</li>
+				<li id="路虎车主" class="mui-table-view-cell mui-media">
+					<div class="mui-slider-right mui-disabled">
+						<a class="mui-btn mui-btn-red">删除</a>
+					</div>
+					<div class="mui-slider-handle">
+						<img class="mui-media-object mui-pull-left" src="image/60x60.gif" />
+						<div class="mui-media-body">
+							路虎车主
+							<p class="mui-ellipsis">经过朋友介绍车事帮比4S便宜很多而且方便，家旁边就有好几家特约店，车都开了6年多了但开的比较少才45000公里，购买配件很简单选择自助保养都有推荐的，一气呵成在线支付成功，第二天就收到了，应该都是正品吧，大品牌信得过。</p>
+						</div>
+					</div>
+				</li>
+			</ul>
+		</div>
+		<script>
+			// 向作滑动 的删除方法
+			var btnArray = ['确认', '取消'];
+			mui('#MessageList').on('tap', '.mui-btn', function(event) {
+				var elem = this;
+				var li = elem.parentNode.parentNode;
+				mui.confirm('确认删除该条记录？', '删除记录', btnArray, function(e) {
+					if (e.index == 0) {
+						li.parentNode.removeChild(li);
+					} else {
+						setTimeout(function() {
+							mui.swipeoutClose(li);
+						}, 0);
+					}
+				});
+			});
+		</script>
+	</body>
+
 </html>
