--- a/OrganizationApp/list.html
+++ b/OrganizationApp/list.html
@@ -7,67 +7,7 @@
 		<title></title>
 		<script src="js/mui.min.js"></script>
 		<link href="css/mui.min.css" rel="stylesheet" />
-		<script type="text/javascript" charset="utf-8">
-			mui.init({
-				swipeBack: false,
-				pullRefresh: {
-					container: '#pullrefresh',
-					down: {
-						contentdown: "下拉可以刷新",
-						contentover: "释放立即刷新",
-						contentrefresh: '正在加载...',
-						callback: pulldownRefresh
-					},
-					up: {
-						contentrefresh: '正在加载...',
-						callback: pullupRefresh
-					}
-				}
-			});
-			/**
-			 * 下拉刷新具体业务实现
-			 */
-			function pulldownRefresh() {
-				setTimeout(function() {
-					var table = document.body.querySelector('.mui-table-view');
-					var cells = document.body.querySelectorAll('.mui-table-view-cell');
-					for (var i = cells.length, len = i + 3; i < len; i++) {
-						var li = document.createElement('li');
-						li.className = 'mui-table-view-cell';
-						li.innerHTML = '收到一个汽车保养订单<button type="button" class="mui-btn-warning mui-pull-right">马上秒杀</button>';
-						//下拉刷新，新纪录插到最前面；
-						table.insertBefore(li, table.firstChild);
-					}
-					mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //refresh completed
-				}, 1000);
-			}
-			var count = 0;
-			/**
-			 * 上拉加载具体业务实现
-			 */
-			function pullupRefresh() {
-				setTimeout(function() {
-					mui('#pullrefresh').pullRefresh().endPullupToRefresh((++count > 2)); //参数为true代表没有更多数据了。
-					var table = document.body.querySelector('.mui-table-view');
-					var cells = document.body.querySelectorAll('.mui-table-view-cell');
-					for (var i = cells.length, len = i + 20; i < len; i++) {
-						var li = document.createElement('li');
-						li.className = 'mui-table-view-cell';
-						li.innerHTML = '收到一个汽车保养订单<button type="button" class="mui-btn-warning mui-pull-right">马上秒杀</button>';
-						table.appendChild(li);
-					}
-				}, 1000);
-			}
-			mui("#refreshContainer .mui-table-view").on('tap', '.mui-table-view-cell', function() {
-				mui.toast('秒杀成功，可在我的秒杀查询订单');
-			})
-			var deceleration = mui.os.ios ? 0.003 : 0.0009;
-			mui('.mui-scroll-wrapper').scroll({
-				bounce: false,
-				indicators: true, //是否显示滚动条
-				deceleration: deceleration
-			});
-		</script>
+		
 		<style>
 			html,
 			body {
@@ -91,6 +31,47 @@
 				</ul>
 			</div>
 		</div>
+		<script type="text/javascript" charset="utf-8">
+			mui.init({
+				swipeBack: false,
+				pullRefresh: {
+					container: '#refreshContainer',
+					down: {
+						contentdown: "下拉可以刷新",
+						contentover: "释放立即刷新",
+						contentrefresh: '正在加载...',
+						callback: pulldownRefresh
+					}
+				}
+			});
+			/**
+			 * 下拉刷新具体业务实现
+			 */
+			function pulldownRefresh() {
+				setTimeout(function() {
+					var table = document.body.querySelector('.mui-table-view');
+					var cells = document.body.querySelectorAll('.mui-table-view-cell');
+					for (var i = cells.length, len = i + 3; i < len; i++) {
+						var li = document.createElement('li');
+						li.className = 'mui-table-view-cell';
+						li.innerHTML = '收到一个汽车保养订单<button type="button" class="mui-btn mui-btn-warning mui-pull-right">马上秒杀</button>';
+						//下拉刷新，新纪录插到最前面；
+						table.insertBefore(li, table.firstChild);
+					}
+					mui('#refreshContainer').pullRefresh().endPulldownToRefresh(); //refresh completed
+				}, 1000);
+			}
+			
+			mui("#refreshContainer .mui-scroll .mui-table-view").on('tap', '.mui-table-view-cell', function() {
+				mui.toast('秒杀成功');
+			})
+			var deceleration = mui.os.ios ? 0.003 : 0.0009;
+			mui('.mui-scroll-wrapper').scroll({
+				bounce: false,
+				indicators: true, //是否显示滚动条
+				deceleration: deceleration
+			});
+		</script>
 	</body>
 
 </html>
