修复‘我的’页面跳转和显示bug

--- a/OrganizationApp/TradingCode.html
+++ b/OrganizationApp/TradingCode.html
@@ -23,6 +23,9 @@
 	</head>
 
 	<body>
+	<header class="mui-bar mui-bar-nav">
+			<h1 id="title" class="mui-title">验证</h1>
+		</header>
 		<div class="mui-content">
 			<div class="title">
 				<p>验证消费码</p>
