--- a/OrganizationApp/list.html
+++ b/OrganizationApp/list.html
@@ -19,10 +19,14 @@
 				font-size: 15px;
 				background-color: #fff;
 			}
+			
 		</style>
 	</head>
 
 	<body>
+		<!--<header class="mui-bar mui-bar-nav">
+			<h1 id="title" class="mui-title">秒杀</h1>
+		</header>-->
 		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<ul class="mui-table-view mui-table-view-chevron">
